# LOAF

./: .gitignore  CITATION.cff  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  susiemielekim@gmail.com
.github/workflows/: ci.yml  docs-preview.yml  docs.yml
dev-log/: index.html
dev-log/archive/2026/: index.html
devlog/: mkdocs.yml
docs/: data-sources-setup.md  index.md
docs/dev-log/: .authors.yml  index.md
docs/dev-log/posts/: 2026-01-12-project-start.md  2026-01-13-hello-world.md  2026-01-13-wind-sensors.md  2026-01-14-ws90-teardown.md  2026-01-17-ultrasonic-pcb-v1.md  2026-01-29-ml-pipeline-dev-plan.md
docs/overrides/partials/integrations/: analytics.html
hardware/: .gitignore  README.md
hardware/anemometers/: README.md
hardware/anemometers/loaf-anemometer/: loaf-anemometer.kicad_sch
hardware/anemometers/ultrasonic/: README.md
hardware/anemometers/ultrasonic-anemometer/: README.md
hardware/anemometers/ultrasonic/pcb/: 1_mcu.kicad_sch  2_anemometer.kicad_sch  3_sensors.kicad_sch  4_rain.kicad_sch  ProDoc_1-PCB_PCB_2021-01-26_22-01-27_2026-01-16.kicad_pcb  ProDoc_1-PCB_PCB_2021-01-26_22-01-27_2026-01-16.kicad_pro  fp-lib-table  pnp-file.csv  sym-lib-table  u_anemometer-all-pos.csv  u_anemometer.csv  u_anemometer.kicad_pcb  u_anemometer.kicad_pro  u_anemometer.kicad_sch
hardware/anemometers/ultrasonic/pcba/: anemometer.kicad_sch  fp-lib-table  mcu.kicad_sch  sensors.kicad_sch  u_anemometer.kicad_pcb  u_anemometer.kicad_pro  u_anemometer.kicad_sch
loaf/: __init__.py
loaf/data/download/: hrrr.py
loaf/data/loaders/: __init__.py
loaf/data/preprocessing/: __init__.py
plan/: dev-plan-ml-pipeline.md
pr-preview/pr-32/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  sitemap.xml
pr-preview/pr-32/data-sources-setup/: index.html
pr-preview/pr-32/dev-log/: index.html
search/: search_index.json
software/: QUICKSTART.md  train_log.md
software/config/: seattle.yaml
software/loaf/: config.py
software/loaf/data/: __init__.py
software/loaf/data/download/: __init__.py  era5.py  hrrr.py  iem.py
software/loaf/data/loaders/: __init__.py  dataset.py  era5.py  hrrr.py  iem.py  stations.py
software/loaf/integration/: __init__.py
software/loaf/model/: __init__.py  activations.py  network.py
software/loaf/training/: __init__.py  evaluate.py  trainer.py
software/scripts/: test_dataloaders.py  test_hrrr_download.py  test_model_forward.py  test_training.py  train.py
software/tests/: __init__.py  conftest.py  test_config.py  test_era5_download.py  test_hrrr_download.py
(+70 files in other folders)
